@@ -7,7 +7,7 @@ use warnings;
 use Class::Utils qw(set_params split_params);
 use Error::Pure qw(err);
 use Scalar::Util qw(blessed);
-use Tags::HTML::Element::Utils qw(tags_boolean tags_value);
+use Tags::HTML::Element::Utils qw(tags_boolean tags_label tags_value);
 
 our $VERSION = 0.03;
 
@@ -44,6 +44,7 @@ sub _process {
 	}
 
 	$self->{'tags'}->put(
+		tags_label($self, $self->{'_textarea'}),
 		['b', 'textarea'],
 		tags_boolean($self, $self->{'_textarea'}, 'autofocus'),
 		tags_value($self, $self->{'_textarea'}, 'css_class', 'class'),
